Fixing `pre` tags that do not wrap content

--- a/app/src/main/res/raw/custom_style.css
+++ b/app/src/main/res/raw/custom_style.css
@@ -1,23 +1,28 @@
 body {
-  overflow-wrap: break-word;
+    overflow-wrap: break-word;
+}
+
+pre {
+    word-wrap: break-word; white-space: pre-wrap;
 }
 
 blockquote {
-  padding: 0.2em 1.2em !important;
-  margin: 0 !important;
-  border: 3px solid var(--kmail-primary-color) !important;
-  border-width: 0 0 0 3px !important;
+    padding: 0.2em 1.2em !important;
+    margin: 0 !important;
+    border: 3px solid var(--kmail-primary-color) !important;
+    border-width: 0 0 0 3px !important;
 }
 
 blockquote blockquote blockquote blockquote {
-  padding: 0 !important;
-  border: none !important;
+    padding: 0 !important;
+    border: none !important;
 }
 
 table.munged {
     width: auto !important;
     table-layout: auto !important;
 }
+
 td.munged {
     width: auto !important;
     white-space: normal !important;
